--- a/libstatus.html
+++ b/libstatus.html
@@ -537,7 +537,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Adder</td>
@@ -553,7 +553,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Subtractor</td>
@@ -569,7 +569,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Multiplier</td>
@@ -585,7 +585,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Divider</td>
@@ -601,7 +601,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Negator</td>
@@ -617,7 +617,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Comparator</td>
@@ -633,7 +633,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Shifter</td>
@@ -649,7 +649,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Bit Adder</td>
@@ -665,7 +665,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Bit Finder</td>
@@ -681,7 +681,7 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Floating Point Adder</td>
@@ -697,12 +697,12 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Floating Point Subtractor</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpsubtractor.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/libs/arith/fpsubtractor.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpsubtractor.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpsubtractor.html">__</a></td>
@@ -713,12 +713,12 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Floating Point Multiplier</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpmultiplier.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/libs/arith/fpmultiplier.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpmultiplier.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpmultiplier.html">__</a></td>
@@ -729,12 +729,12 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Floating Point Divider</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpdivider.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/libs/arith/fpdivider.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpdivider.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpdivider.html">__</a></td>
@@ -745,12 +745,12 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Floating Point Negator</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpnegator.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/libs/arith/fpnegator.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpnegator.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpnegator.html">__</a></td>
@@ -761,16 +761,48 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Floating Point Comparator</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpcomparator.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/libs/arith/fpcomparator.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpcomparator.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpcomparator.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/libs/arith/fpcomparator.html">__</a></td>
+		<td align="center"></td>
+		<td align="center"></td>
+		<td align="center"></td>
+		<td align="center"></td>
+	</tr>
+		<tr>
+		<td height="17" class="good">3.9</td>
+		<td align="left"></td>
+		<td align="left"></td>
+		<td align="left">Floating Point to Integer</td>
+		<td align="left"></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpfptoint.html">_V</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/arith/fpfptoint.html">_V</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpfptoint.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpfptoint.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/arith/fpfptoint.html">__</a></td>
+		<td align="center"></td>
+		<td align="center"></td>
+		<td align="center"></td>
+		<td align="center"></td>
+	</tr>
+		<tr>
+		<td height="17" class="good">3.9</td>
+		<td align="left"></td>
+		<td align="left"></td>
+		<td align="left">Integer to Floating Point</td>
+		<td align="left"></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpinttofp.html">_V</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/arith/fpinttofp.html">_V</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpinttofp.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpinttofp.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/arith/fpinttofp.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
