--- a/pt/html/libs/arith/bitfinder.html
+++ b/pt/html/libs/arith/bitfinder.html
@@ -14,7 +14,7 @@
   <body>
     <div class="maindiv">
     <h1>
-      <img src="../../../../icons/bitfindr.gif" width="32" height="32" align="middle" alt="#########"> <em>Indexador de Bits</em>
+        <img class="iconlibs" src="../../../../icons/6464/bitfindr.png" alt="#########" width="32" height="32" align="middle"> <em>Recherche de bit</em>
     </h1>
     <table>
       <tbody>
@@ -39,7 +39,7 @@
             <strong>Aparência:</strong>
           </td>
           <td valign="top">
-            <img src="../../../../img-libs/bitfindr.png" alt="#########">
+              <img class="Apparencelibs" src="../../../../img-libs/bitfindr.png" alt="#########" width="64" height="64">
           </td>
         </tr>
       </tbody>
