--- a/pt/html/libs/arith/subtractor.html
+++ b/pt/html/libs/arith/subtractor.html
@@ -8,6 +8,8 @@
     <meta http-equiv="Content-Language" content="pt">
 	<title>
       Subtrator
+      </title>
+    <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
       <div class="maindiv">
