--- a/en/html/libs/arith/fpcomparator.html
+++ b/en/html/libs/arith/fpcomparator.html
@@ -77,7 +77,7 @@
          East edge: labeled <var>=</var>
          </dt>
         <dd>
-          Output: <b class="unov">1</b> if the first input equals the second input, <b class="zerov">0</b> if the first input is not equal the second input. Bit width always 1.
+          Output: <b class="unov">1</b> if the first input equals the second input, <b class="zerov">0</b> if the first input is not equal the second input. The bit width is 1. 
         </dd>
 		<dt class="lib">
          East edge: labeled <var>&lt;</var>
