--- a/en/html/libs/arith/fpfptoint.html
+++ b/en/html/libs/arith/fpfptoint.html
@@ -48,7 +48,7 @@
         Behavior
       </h2>
       <p>
-       This component returns an integer value on the east output, which corresponds to the  floating-poin value, rounded to the nearest whole number, it receives on the west input.<br>It has an error output in the south, which is set to <b class="unov">1</b> if the component receives an error(<b class="evalue">E</b>) or undefined(<b class="uvalue">U</b>) signal or the floating-point values <var>NaN</var>
+       This component returns an integer value on the east output, which corresponds to the  floating-poin value, rounded to the nearest whole number, it receives on the west input.<br>It has an error output in the south, which is set to <b class="unov">1</b> if the component receives an error(<b class="evalue">E</b>) or undefined(<b class="uvalue">U</b>) signal or the floating-point values <var>NaN<sub>f</sub></var>
       </p>
       <h2>
         Pins
@@ -56,7 +56,7 @@
 	  <div class="attliste">
       <dl>
         <dt class="lib">
-          West edge :
+          West edge:
          </dt>
         <dd>
            Input: Enter floating-point values to be converted. Bit width matches the Data <b class="property">Float size</b> attribute.
@@ -71,7 +71,7 @@
           South edge: 
          </dt>
         <dd>
-          OutPut: Error Set to  <b class="unov">1</b> if the negator receives an error (<b class="evalue">E</b>) or undefined (<b class="uvalue">U</b>) signal or the floating-point values <var>NaN</var>
+          OutPut: Error Set to  <b class="unov">1</b> if the component receives an error (<b class="evalue">E</b>) or undefined (<b class="uvalue">U</b>) signal or the floating-point values <var>NaN<sub>f</sub></var>
         </dd>
       </dl>
 	  </div>
