--- a/en/html/libs/arith/fpnegator.html
+++ b/en/html/libs/arith/fpnegator.html
@@ -7,14 +7,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="en">
     <title>
-      Floating Point Multiplier
+      Floating Point Negator
     </title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
     <div class="maindiv">
       <h1>
-        <img class="iconlibs" src="../../../../icons/6464/fpnegator.png" alt="#########" width="32" height="32" align="middle"> <em>Floating Point Multiplier</em>
+        <img class="iconlibs" src="../../../../icons/6464/fpnegator.png" alt="#########" width="32" height="32" align="middle"> <em>Floating Point Negator</em>
       </h1>
       <table>
         <tbody>
@@ -56,7 +56,7 @@
 	  <div class="attliste">
       <dl>
         <dt class="lib">
-          West edge :
+          West edge:
          </dt>
         <dd>
           Input: Enter floating-point values to invert sign. Bit width matches the Data <b class="property">Float size</b> attribute.
