--- a/ru/html/libs/arith/bitadder.html
+++ b/ru/html/libs/arith/bitadder.html
@@ -14,7 +14,7 @@
   <body>
     <div class="maindiv">
       <h1>
-        <img src="../../../../icons/bitadder.gif" width="32" height="32" align="middle" alt="#########"> <em>Сумматор битов</em>
+        <img class="iconlibs" src="../../../../icons/6464/bitadder.png" alt="#########" width="32" height="32" align="middle"> <em>Additionneur bit à bit</em>
       </h1>
       <table>
         <tbody>
@@ -39,7 +39,7 @@
               <strong>Внешний вид:</strong>
             </td>
             <td valign="top">
-              <img src="../../../../img-libs/bitadder.png" width="44" height="42" alt="#########">
+              <img class="Apparencelibs" src="../../../../img-libs/bitadder.png" alt="#########" width="64" height="64">
             </td>
           </tr>
         </tbody>
