--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
 <br>
 <h2>
-<a href="./docstatus.html">User Guide Status</a><br><br>
-<a href="./libstatus.html">Library libs Status</a><br>
+  <a href="./docstatus.html">User Guide Status</a>
 </h2>
 <a href="./en/html/guide/index.html">User Guide EN</a><br><br>
 <a href="./fr/html/guide/index.html">User Guide FR  Guide l'utilisateur Logisim-evolution</a><br><br>
@@ -22,6 +21,7 @@
 <a href="./pt/html/guide/index.html">User Guide PT  Guia para se tornar usuário do Logisim-evolution</a><br><br>
 <a href="./ru/html/guide/index.html">User Guide RU  Руководство "Как стать пользователем Logisim-evolution" </a><br><br>
 <h2>
+  <a href="./libstatus.html">Library libs Status</a><br>
 </h2>
 <a href="./en/html/libs/index.html">Library Reference EN</a><br><br>
 <a href="./fr/html/libs/index.html">Library Reference FR Référence de la bibliothèque</a><br><br>
@@ -29,7 +29,11 @@
 <a href="./pt/html/libs/index.html">Library Reference PT Referências para bibliotecas</a><br><br>
 <a href="./ru/html/libs/index.html">Library Reference RU Library Reference RU</a><br><br>
 <h2>
-
+  Documentation resources
+</h2>
+  <a href="D:\Users\mbaillif\Documents\GitHub\Logisim-evolution-documentation\xresourcesfordoc\Indexer">Document indexer for keyword searches</a>
+<h2>
+  
 </h2>
 <a href="./email.png">Email</a>
 <br>
