--- a/en/html/guide/menu/simulate.html
+++ b/en/html/guide/menu/simulate.html
@@ -28,7 +28,7 @@
             The menu option will be automatically unchecked if <a href="../prop/oscillate.html">circuit oscillation</a> is detected.
           </p>
         </dd>
-		<dt>
+        <dt>
           <strong>Single Step Propagation</strong>&nbsp;&nbsp;<b class="tkeybd">Ctrl-I</b>
         </dt>
         <dd>
@@ -44,13 +44,15 @@
             Clears everything about the current circuit's state, so that it is as if you have just opened the file again. If you are viewing a subcircuit's state, the entire hierarchy is cleared.
           </p>
         </dd>
-      
         <dt>
           <strong>VHDL Simulation Enabled</strong>
         </dt>
         <dd>
           <p>
-            not documented yet
+            Enables simulation of a VHDL entity in conjunction with third-party software.
+          </p>
+          <p>
+            <b class="note">Note</b> : For VHDL simulation to work, third-party software must be installed and configured. Logisim will check for the presence of this software when saving or loading.
           </p>
         </dd>
         <dt>
@@ -58,7 +60,7 @@
         </dt>
         <dd>
           <p>
-            not documented yet
+            Clears everything about the current circuit's state, so that it is as if you have just opened the file again.
           </p>
         </dd>
         <dt>
@@ -66,7 +68,7 @@
         </dt>
         <dd>
           <p>
-            When you <a href="../subcirc/sub-debug.html">delve into a subcircuit's state</a> via its pop-up menu, the <b class=menu>|&nbsp;Go Out To State&nbsp;|</b> submenu lists the circuits above the currently viewed circuit's state. Selecting one displays the corresponding circuit.
+            When you <a href="../subcirc/sub-debug.html">delve into a subcircuit's state</a> via its pop-up menu, the <b class="menu">|&nbsp;Go Out To State&nbsp;|</b> submenu lists the circuits above the currently viewed circuit's state. Selecting one displays the corresponding circuit.
           </p>
         </dd>
         <dt>
@@ -74,7 +76,7 @@
         </dt>
         <dd>
           <p>
-            If you have delved into a subcircuit's state and then moved back out, this submenu <b class=menu>|&nbsp;Go In To State&nbsp;|</b> lists the subcircuits below the current circuit. Selecting one of the circuits displays the corresponding circuit.
+            If you have delved into a subcircuit's state and then moved back out, this submenu <b class="menu">|&nbsp;Go In To State&nbsp;|</b> lists the subcircuits below the current circuit. Selecting one of the circuits displays the corresponding circuit.
           </p>
         </dd>
         <dt>
@@ -82,8 +84,8 @@
         </dt>
         <dd>
           <p>
-			Advances the clocks in the simulation by one tick when using the step-by-step mode. A clock set with a high/low duration of 1 tick will then advance by half a cycle.<br>  
-			This can be useful when you want to advance the clocks manually, especially when the clock is not in the same circuit as the one you are currently viewing.
+            Advances the clocks in the simulation by one tick when using the step-by-step mode. A clock set with a high/low duration of 1 tick will then advance by half a cycle.<br>
+            This can be useful when you want to advance the clocks manually, especially when the clock is not in the same circuit as the one you are currently viewing.
           </p>
         </dd>
         <dt>
@@ -91,7 +93,8 @@
         </dt>
         <dd>
           <p>
-            Same function as before, but advances by two ticks. A clock set with a high/low duration of 1 tick will then advance one complete cycle.<br> The other clocks of the project advance simultaneously in proportion to their parameters.
+            Same function as before, but advances by two ticks. A clock set with a high/low duration of 1 tick will then advance one complete cycle.<br>
+            The other clocks of the project advance simultaneously in proportion to their parameters.
           </p>
         </dd>
         <dt>
@@ -103,7 +106,7 @@
           </p>
         </dd>
         <dt>
-        <strong>Auto Tick Frequency</strong>
+          <strong>Auto Tick Frequency</strong>
         </dt>
         <dd>
           <p>
@@ -111,10 +114,9 @@
           </p>
           <p align="center">
             <img class="notscal" src="../../../../img-guide/clock.png" alt="#########">
-          </p>
-		  <b class=note>Example:</b> Tic hight = 2, Tic low = 2, Clock = tic frequency / ( 2 + 2)
+          </p><b class="note">Example:</b> Tic hight = 2, Tic low = 2, Clock = tic frequency / ( 2 + 2)
           <p>
-            <b class=note>Note:</b> that the clock cycle speed will be slower than the tick speed: The fastest possible clock will have a one-tick up cycle and a one-tick down cycle; such a clock would have up/down cycle rate of 4 Hz if the ticks occur at 8 Hz.
+            <b class="note">Note:</b> that the clock cycle speed will be slower than the tick speed: The fastest possible clock will have a one-tick up cycle and a one-tick down cycle; such a clock would have up/down cycle rate of 4 Hz if the ticks occur at 8 Hz.
           </p>
         </dd>
         <dt>
@@ -125,11 +127,11 @@
             Enters the <a href="../log/index.html">logging module</a>, which facilitates automatically noting and saving values in a circuit as a simulation progresses.
           </p>
         </dd>
+        <dd></dd>
+        <dt>
+          <strong>Test Vector...</strong>
+        </dt>
         <dd>
-		<dt>
-		   <strong>Test Vector...</strong>
-		 </dt>
-		 <dd>
           <p>
             <a href="../verify/test.html">The window Vector of tests</a> Allows you to check your circuits thanks to a test vector file that presents the inputs and outputs of the circuit.
           </p>
