--- a/fr/html/guide/menu/simulate.html
+++ b/fr/html/guide/menu/simulate.html
@@ -36,7 +36,7 @@
             Avance <a href="../tutorial/tutor-step.html">la simulation d'une étape</a>. Par exemple,au cours d'une étape, un signal peut entrer dans une porte , mais la sortie de la porte n'affichera pas de changement de signal avant la prochaine étape de simulation. Pour aider à identifier les points du circuit global qui ont changé, tous les points dont les valeurs changent sont indiqués par un cercle bleu. Si un sous-circuit contient des points qui ont été modifiés (ou ses sous-circuits, récursivement), alors il sera entouré avec une ligne bleue.
           </p>
         </dd>
-		<dt>
+        <dt>
           <strong>Redémarrer la simulation</strong>&nbsp;&nbsp;<b class="tkeybd">Ctrl-R</b>
         </dt>
         <dd>
@@ -49,7 +49,10 @@
         </dt>
         <dd>
           <p>
-            pas documenté pour l'instant
+            Active la simulation d'une entitée VHDL en liaison avec un logiciel tiers.
+          </p>
+          <p>
+            <b class="note">Note</b> : Pour la simulation VHDL fonctionne, un logiciel tiers doit être installé et configuré. Logisim vérifiera à la sauvegarde ou au chargement la présence de ce logiciel.
           </p>
         </dd>
         <dt>
@@ -57,7 +60,7 @@
         </dt>
         <dd>
           <p>
-            pas documenté pour l'instant
+            Efface tout ce qui concerne l’état du circuit VHDL actuel, comme si vous veniez d’ouvrir à nouveau le fichier.
           </p>
         </dd>
         <dt>
@@ -65,7 +68,7 @@
         </dt>
         <dd>
           <p>
-            Quand vous avez exploré l'état d'un sous circuit pour <a href="../subcirc/sub-debug.html">le débugger</a> a l'aide de son menu local. Le menu <b class=menu>|&nbsp;Sortir de la vue&nbsp;|</b> permet d'afficher la vue de l'état des circuits supérieur de la hiérarchie. Les noms de ceux-ci sont présentés dans des options du menu.
+            Quand vous avez exploré l'état d'un sous circuit pour <a href="../subcirc/sub-debug.html">le débugger</a> a l'aide de son menu local. Le menu <b class="menu">|&nbsp;Sortir de la vue&nbsp;|</b> permet d'afficher la vue de l'état des circuits supérieur de la hiérarchie. Les noms de ceux-ci sont présentés dans des options du menu.
           </p>
         </dd>
         <dt>
@@ -73,7 +76,7 @@
         </dt>
         <dd>
           <p>
-            De même, le menu <b class=menu>|&nbsp;Aller dans la vue&nbsp;|</b> permets de revenir dans la vue des circuits inférieurs de la hiérarchie. Les circuits sont présentés comme des options du menu.
+            De même, le menu <b class="menu">|&nbsp;Aller dans la vue&nbsp;|</b> permets de revenir dans la vue des circuits inférieurs de la hiérarchie. Les circuits sont présentés comme des options du menu.
           </p>
         </dd>
         <dt>
@@ -81,8 +84,8 @@
         </dt>
         <dd>
           <p>
-            Avance d'un tic les horloges dans la simulation quand on utilise le mode pas-à-pas. Une horloge paramètrée avec une durée haute/basse de 1 tic avancera alors d'un demi-cycle.<br>  
-			Cela peut être utile lorsque vous souhaitez faire avancer les horloges manuellement, en particulier lorsque l’horloge ne se trouve pas dans le même circuit que celui que vous consultez actuellement.
+            Avance d'un tic les horloges dans la simulation quand on utilise le mode pas-à-pas. Une horloge paramètrée avec une durée haute/basse de 1 tic avancera alors d'un demi-cycle.<br>
+            Cela peut être utile lorsque vous souhaitez faire avancer les horloges manuellement, en particulier lorsque l’horloge ne se trouve pas dans le même circuit que celui que vous consultez actuellement.
           </p>
         </dd>
         <dt>
@@ -90,7 +93,8 @@
         </dt>
         <dd>
           <p>
-            Même fonction que précédèrent, mais avance de deux tic. Une horloge paramètrée avec une durée haute/basse de 1 tic avancera alors d'un cycle complet.<br> Les autres horloges du projet avancent simultanément proportionnellement à leurs paramètres.
+            Même fonction que précédèrent, mais avance de deux tic. Une horloge paramètrée avec une durée haute/basse de 1 tic avancera alors d'un cycle complet.<br>
+            Les autres horloges du projet avancent simultanément proportionnellement à leurs paramètres.
           </p>
         </dd>
         <dt>
@@ -110,10 +114,9 @@
           </p>
           <p align="center">
             <img class="notscal" src="../../../../img-guide/clock.png" alt="#########">
-          </p>
-		  <b class=note>Exemple:</b> Tic haut = 2, Tic bas = 2, Clock = Fréquence tic / ( 2 + 2)
+          </p><b class="note">Exemple:</b> Tic haut = 2, Tic bas = 2, Clock = Fréquence tic / ( 2 + 2)
           <p>
-            <b class=note>Note :</b> La fréquence des périodes d'horloge sera plus lente que la vitesse d'activation (tic): l'horloge la plus rapide possible aura un cycle haut à un tic et un cycle bas à un tic. Une telle horloge aurait une fréquence de 4 Hz (un cycle complet haut/bas) si la fréquence des tics est à 8 Hz.
+            <b class="note">Note :</b> La fréquence des périodes d'horloge sera plus lente que la vitesse d'activation (tic): l'horloge la plus rapide possible aura un cycle haut à un tic et un cycle bas à un tic. Une telle horloge aurait une fréquence de 4 Hz (un cycle complet haut/bas) si la fréquence des tics est à 8 Hz.
           </p>
         </dd>
         <dt>
