--- a/docstatus.html
+++ b/docstatus.html
@@ -758,7 +758,7 @@
 		<td align="left"></td>
 		<td align="left">The Simulate menu</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/guide/menu/simulate.html"> V</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/menu/simulate.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/menu/simulate.html">__</a></td>
 		<td align="center" class="needtask"><a href="./de/html/guide/menu/simulate.html">CA</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/guide/menu/simulate.html">CV</a></td>
@@ -1186,13 +1186,13 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">The International tab</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/guide/prefs/pref-intl.html">C_</a></td>
-		<td align="center" class="good"><a href="./fr/html/guide/prefs/pref-intl.html">C_</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/prefs/pref-intl.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/guide/prefs/pref-intl.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/guide/prefs/pref-intl.html">__</a></td>
 		<td align="center" class="good"><a href="./pt/html/guide/prefs/pref-intl.html">C_</a></td>
 		<td align="center" class="good"><a href="./ru/html/guide/prefs/pref-intl.html">C_</a></td>
@@ -1202,20 +1202,20 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">The Window tab</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/guide/prefs/pref-window.html">_V</a></td>
-		<td align="center" class="good"><a href="./fr/html/guide/prefs/pref-window.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/prefs/pref-window.html">_V</a></td>
+		<td align="center" class="good"><a href="./fr/html/guide/prefs/pref-window.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/guide/prefs/pref-window.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/guide/prefs/pref-window.html">CV</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/guide/prefs/pref-window.html">CV</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
-		<td align="center">upd picture</td>
+		<td align="center"></td>
 		<td></td>
 	</tr>
 	<tr>
