--- a/fr/html/guide/prefs/pref-intl.html
+++ b/fr/html/guide/prefs/pref-intl.html
@@ -75,6 +75,8 @@
           <ul>
             <li>La traduction <b>Allemande</b> a été introduite avec Logisim 2.6.1. Produite par Uwe Zimmermann, membre du corps professoral de l'Université d'Uppsala en Suède.
             </li>
+			<li>La traduction <b>Chinoise</b> a été introduite avec Logisim 3.9 Produite par liuyu chen Beijing University of Technology.
+            </li>
             <li>La traduction <b>Espagnole</b> a été introduite avec Logisim 2.1.0. Produite par Pablo Leal Ramos, d'Espagne.
             </li>
             <li>La traduction <b>Française</b> a été introduite partiellement avec Logisim 2.13.22. Produite par Roberto Rigamonti et complétée dans Logisim 2.14.2 par Marc-André Baillifard Université de Lausanne
@@ -83,26 +85,27 @@
             </li>
 			<li>La traduction <b>Italienne</b> a été introduite avec Logisim 2.14.7
             </li>
+			<li>La traduction <b>Japonaise</b> a été introduite avec Logisim 3.4.2 Produite par Narita.
+            </li>
 			<li>La traduction <b>Néerlandais</b> a été introduite avec Logisim 2.3.0
 			</li>
+			<li>La traduction <b>Polonaise</b> a été introduite avec Logisim 3.4.0
+            </li>
             <li>La traduction <b>Portugaise</b> a été introduite avec Logisim 2.6.2. Produite par Theldo Cruz Franqueira, membre du corps professoral de la Pontifícia Universidade Católica de Minas Gerais au Brésil.
             </li>
             <li>La traduction <b>Russe</b> a été introduite avec Logisim 2.4.0. Produite par Ilia Lilov, de Russie.
-            </li>
-			<li>La traduction <b>Polonaise</b> a été introduite avec Logisim 3.4.0
-            </li>
-			<li>La traduction <b>Japonaise</b> a été introduite avec Logisim 3.4.2 Produite par Narita.
             </li>
           </ul>
           <p>
 		    Compte tenu des évolutions les traductions ne sont pas toutes aux mêmes niveaux et il y a encore beaucoup à traduire et corriger. Les traductions de Logisim et de la documentation sont les bienvenues! Si vous êtes intéressé, contactez <a href="https://github.com/logisim-evolution/logisim-evolution/blob/master/README.md">github.com/logisim-evolution/logisim-evolution</a>. Ce ne sera pas un engagement: nous serions heureux d'entendre vos intérêts. Le processus de traduction ne nécessite pas une compréhension de Java ou de programmation.
           </p>
         </li>
-        <li>
+<!--        <li>
           <p>
             <b>Remplacez les caractères accentués:</b> Certaines plates-formes ne prennent pas en charge les caractères (tels que ñ ou ö) qui n'apparaissent pas dans le jeu de caractères ASCII 7 bits. Lorsque cette case est cochée, Logisim remplacera toutes les instances des caractères par les caractères ASCII 7 bits équivalents appropriés. La case à cocher est désactivée lorsque la langue actuelle ne dispose d'aucun équivalent (comme pour l'anglais).
           </p>
         </li>
+-->
       </ul>
       <p>
         <b>Suite:</b> <a href="pref-window.html">l'onglet Window</a>.
