--- a/en/html/guide/prefs/pref-intl.html
+++ b/en/html/guide/prefs/pref-intl.html
@@ -74,6 +74,8 @@
           <ul>
 		    <li>The <b>French</b> translation was introduced partially with Logisim 2.13.22. Produced by Roberto Rigamonti and completed in Logisim 2.14.2 by Marc-André Baillifard Université de Lausanne
             </li>
+			<li>The  <b>Chinese</b> translation was introduced with Logisi 3.9 It is by liuyu chen Beijing University of Technology.
+            </li>
             <li>The <b>German</b> translation was introduced with Logisim 2.6.1. It is by Uwe Zimmermann, a faculty member at Uppsala University in Sweden.
             </li>
             <li>The <b>Greek</b> translation was introduced with Logisim 2.7.0. It is by Thanos Kakarountas, a faculty member at Technological Educational Institute of Ionian Islands in Greece.
@@ -82,13 +84,13 @@
 			</li>
 			<li>The <b>Nederlands</b> translation was introduced with Logisim 3.2.0
 			</li>
+			<li>The <b>Polonaise</b> translation was introduced with Logisim Logisim 3.4.0
+            </li>
             <li>The <b>Portuguese</b> translation was introduced with Logisim 2.6.2. It is by Theldo Cruz Franqueira, a faculty member at Pontifícia Universidade Católica de Minas Gerais in Brazil.
             </li>
             <li>The <b>Russian</b> translation was introduced with Logisim 2.4.0. It is by Ilia Lilov, from Russia.
             </li>
             <li>The <b>Spanish</b> translation was complete as of Logisim 2.1.0, but subsequent Logisim versions have added new options that remain untranslated. It was contributed by Pablo Leal Ramos, from Spain.
-            </li>
-			<li>The <b>Polonaise</b> translation was introduced with Logisim Logisim 3.4.0
             </li>
 			<li>The <b>Japonaise</b> translation was introduced with Logisim 3.4.2 It is by  Narita.
             </li>
@@ -97,11 +99,12 @@
             Due to the changes, not all translations are at the same level and there is still a lot to be translated and corrected. Logisim translations and documentation are welcome! If you are interested, please contact <a href="https://github.com/logisim-evolution/logisim-evolution/blob/master/README.md">github.com/logisim-evolution/logisim-evolution</a>. This will not be a commitment: I will be happy to hear of your interest, and I will tell you whether I know of somebody who is working on it already, prepare a version for you to work with, and send you instructions. The translation process does not require an understanding of Java.
           </p>
         </li>
-        <li>
+<!--        <li>
           <p>
             <b>Replace accented characters:</b> Some platforms have poor support for characters (such as ñ or ö) that do not appear in the 7-bit ASCII character set. When this is checked, Logisim will replace all instances of the characters with the appropriate equivalent 7-bit ASCII characters. The checkbox is disabled when the current language does not have any equivalents available (as with English).
           </p>
         </li>
+-->
       </ul>
       <p>
         <b>Next:</b> <a href="pref-window.html">The Window tab</a>.
