--- a/en/html/guide/prefs/pref-window.html
+++ b/en/html/guide/prefs/pref-window.html
@@ -25,7 +25,7 @@
       <ul>
 	  <li>
 		  <p>
-            <b>Reset window layout to logisims default settings</b> This button allows you to reset the appearance parameters to the default values of Logisim-Evolution.
+            <b>Reset window layout to logisims default settings</b> This button allows you to reset the window position parameters to the default values of Logisim-Evolution.
           </p>
 		</li>
         <li>
@@ -34,6 +34,11 @@
           </p>
           <p>
             This actual tick rate may be much less than the selected tick rate, because Logisim cannot simulate larger circuits at a very fast rate. For example, Logisim's maximum speed for a reasonably large circuit might be 16 Hz; you can select a faster tick rate, but the actual speed will not exceed 16 Hz.
+          </p>
+        </li>
+		<li>
+          <p>
+            <b>Main canvas location:</b> This drop-down menu configures the location of the canvas within the overall window. The canvas area may be placed on of the window's two borders, described as east, and west.
           </p>
         </li>
         <li>
@@ -47,7 +52,9 @@
 			<b>Canvas Background Color: </b> changes the background color of the workspace when the display does not show the grid<br>
 			<b>Grid Background Color: </b> changes the background color of the workspace when the display shows the grid<br>
 			<b>Grid Dot Color: </b> changes the display color of the main points of the grid<br>
-			<b>Grid Zoomed DOt Color: </b> changes the display color of the sub-unit points in the grid<br>
+			<b>Grid Zoomed Dot Color: </b> changes the display color of the sub-unit points in the grid<br>
+			<b>Component Color: </b> changes the display color of the component<br>
+			<b>Reset grid colors to Logisim's defaults:</b> returns all color settings to default values<br>
           </p>
         </li>
         <li>
