--- a/fr/html/guide/prefs/pref-window.html
+++ b/fr/html/guide/prefs/pref-window.html
@@ -25,20 +25,25 @@
       <ul>
         <li>
 		  <p>
-            <b>Reset de l'aparence vers les valeurs par défaut</b> Ce bouton permet de réinitialiser les paramètres d'apparence aux valeur par défaut de Logisim-Evolution.
+            <b>Réinitialiser la diposition de la fenêtre aux paramètres par defaut</b> Ce bouton permet de réinitialiser la position des fenêtres aux valeur par défaut.
           </p>
 		</li>
 		<li>
           <p>
-            <b>Afficher la fréquence des tics:</b> Si cette case est cochée et lorsque les tics sont activés, Logisim affiche en haut à droite de la zone d'édition une mesure de la fréquence à laquelle les tics ont pu être exécutés. Le taux de tics est mesuré en faisant la moyenne sur les 1000 tics précédents. (La désactivation des tics ou la modification de la fréquence des tics efface son historique.)
+            <b>Afficher la fréquence des tics :</b> Si cette case est cochée et lorsque les tics sont activés, Logisim affiche en haut à droite de la zone d'édition une mesure de la fréquence à laquelle les tics ont pu être exécutés. Le taux de tics est mesuré en faisant la moyenne sur les 1000 tics précédents. (La désactivation des tics ou la modification de la fréquence des tics efface son historique.)
           </p>
           <p>
             La fréquence des tics réelle peut être très inférieure à la fréquence de tics sélectionnés, car Logisim ne peut pas simuler des circuits importants à un rythme très rapide. Par exemple, la vitesse maximale de Logisim pour un circuit raisonnablement grand pourrait être de 16 Hz, vous pouvez sélectionner une fréquence de tic plus rapide, mais la vitesse réelle ne dépassera pas les 16 Hz.
           </p>
         </li>
+		<li>
+          <p>
+            <b>Emplacement principal du canveas :</b> Ce menu déroulant configure l'emplacement du canevas dans la fenêtre globale. La zone du canevas peut être placée sur l'une des deux bordures de la fenêtre, décrites comme étant l'est et l'ouest.
+          </p>
+        </li>
         <li>
           <p>
-            <b>Position de la barre d'outils:</b> Ce menu déroulant configure l'emplacement de la barre d'outils dans la fenêtre globale. La barre d'outils peut être placée sur l'une des quatre bordures de la fenêtre, décrites comme étant le nord, le sud, l'est et l'ouest. Il peut également être masqué ou placé "au milieu", c'est-à-dire à gauche de la zone de dessins, mais à droite du volet de l'explorateur et de la table attributaire.
+            <b>Position de la barre d'outils :</b> Ce menu déroulant configure l'emplacement de la barre d'outils dans la fenêtre globale. La barre d'outils peut être placée sur l'une des quatre bordures de la fenêtre, décrites comme étant le nord, le sud, l'est et l'ouest. Il peut également être masqué ou placé "au milieu", c'est-à-dire à gauche de la zone de dessins, mais à droite du volet de l'explorateur et de la table attributaire.
           </p>
         </li>
 		<li>
@@ -48,18 +53,24 @@
 			<b>Couleur de fond si grille</b> modifie la couleur de fond de l'espace de travaille quand l'affichage présente la grille<br>
 			<b>Couleur des points d'unité</b> modifie la couleur d'affichage des points principaux de la grille<br>
 			<b>Couleur des points de sous unité</b> modifie la couleur d'affichage des points de sous unité de la grille<br>
+			<b>Couleur des composants</b> modifie la couleur d'affichage des composants<br>
+			<b>Réinitialiser les couleurs de la grille aux valeurs par défaut</b> ramène tout les règlage de couleur aux valeurs par defaut<br>
           </p>
         </li>
 		<li>
           <p>
-            <b>Facteur de Zoom:</b> Permets de définir un facteur de zoom sur l'ensemble de l'interface. Ceci pour une utilisation sur des écrans HD. Préconisez plutôt d'utiliser les possibilités de l'OS pour cela.<br>
+            <b>Facteur de Zoom :</b> Permets de définir un facteur de zoom sur l'ensemble de l'interface. Ceci pour une utilisation sur des écrans HD. Préconisez plutôt d'utiliser les possibilités de l'OS pour cela.<br>
+            <b>Nécessite de relancer le programme</b>
+          </p>
+		  <p>
+            <b>Règler le facteur de zoom sur la valeur par defaut :</b> Règle le facteur de zoom sur la valeur par defaut<br>
             <b>Nécessite de relancer le programme</b>
           </p>
         </li>
         <li>
           <p>
-            <b>Aspect de l'interface:</b> Permets de sélectionner un certain nombre d'aspects de l'interface à expérimenter selon vos goûts.<br>
-			Metal
+            <b>Aspect de l'interface :</b> Permets de sélectionner un certain nombre d'aspects de l'interface à expérimenter selon vos goûts.
+			<br>Metal
 			<br>Nimbus
 			<br>CDE/Motif
 			<br>Windows
@@ -72,12 +83,12 @@
         </li>
        <li>
           <p>
-            <b>Prévisualisation:</b> Ces boutons et cases sont la pour vous présenter a quoi va ressembler l'interface après la modification de l'aspect de l'interface  </b>
+            <b>Prévisualisation :</b> Ces boutons et cases sont la pour vous présenter a quoi va ressembler l'interface après la modification de l'aspect de l'interface  </b>
           </p>
         </li>
       </ul>
       <p>
-        <b>Suite:</b> <a href="pref-layout.html">Onglet Disposition</a>.
+        <b>Suite :</b> <a href="pref-layout.html">Onglet Disposition</a>.
       </p>
     </div>
   </body>
